--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "next": "15.0.4",
     "react": "^19.0.0",
