img avatar is fixed

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "moment": "^2.30.1",
